<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meetingCreate_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateMeetingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <Button
                android:id="@+id/create_meeeting_fragment_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_save_button"
                android:layout_marginEnd="@dimen/margin_end_save_button"
                android:background="@color/design_default_color_primary"
                android:paddingStart="@dimen/margin_padding_start_save_button"
                android:paddingTop="0dp"
                android:paddingEnd="@dimen/margin_padding_end_save_button"
                android:paddingBottom="0dp"
                android:text="@string/save_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <Spinner
                android:id="@+id/create_meeting_fragment_spinner"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_spinner"
                android:layout_marginTop="@dimen/margin_details_top_spinner"
                android:prompt="@string/meeting_room"
                android:contentDescription="dlkjfslkdfj"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.272"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_meeting_fragment_select" />

            <TextView
                android:id="@+id/create_meeting_fragment_date_textView"
                android:layout_width="@dimen/width_details_date_text_view"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_details_date_text_view"
                android:layout_marginTop="@dimen/margin_top_details_date_text_view"
                android:text="@string/date"
                android:textSize="@dimen/normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/meetingName_TextInputLayout" />

            <TextView
                android:id="@+id/create_meeting_fragment_start_hour"
                android:layout_width="@dimen/width_details_start_hour"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_details_start_hour"
                android:layout_marginTop="@dimen/margin_top_details_start_hour"
                android:text="@string/begin_hour_2points"
                android:textSize="@dimen/normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_meeting_fragment_date_textView" />

            <TextView
                android:id="@+id/create_meeting_fragment_end_hour"
                android:layout_width="@dimen/width_details_end_hour"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_details_end_hour"
                android:layout_marginTop="@dimen/margin_top_details_end_hour"
                android:text="@string/finish_hour_2points"
                android:textSize="@dimen/normal"
                app:layout_constraintEnd_toEndOf="@+id/create_meeting_fragment_start_hour"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_meeting_fragment_start_hour" />

            <Button
                android:id="@+id/create_meeting_fragment_start_hour_button"
                android:layout_width="@dimen/width_details_start_hour_button"
                android:layout_height="wrap_content"
                android:hint="@string/begin_hour"
                android:imeOptions="actionDone"
                android:inputType="time"
                app:maxLines="1"
                android:textSize="@dimen/normal"
                app:layout_constraintBottom_toBottomOf="@+id/create_meeting_fragment_start_hour"
                app:layout_constraintStart_toStartOf="@+id/create_meeting_fragment_date_button"
                app:layout_constraintTop_toTopOf="@+id/create_meeting_fragment_start_hour" />

            <Button
                android:id="@+id/create_meeting_fragment_end_hour_button"
                android:layout_width="@dimen/width_details_end_hour_button"
                android:layout_height="wrap_content"
                android:hint="@string/finish_hour"
                android:imeOptions="actionDone"
                android:inputType="time"
                app:maxLines="1"
                android:textSize="@dimen/normal"
                app:layout_constraintBottom_toBottomOf="@+id/create_meeting_fragment_end_hour"
                app:layout_constraintStart_toStartOf="@+id/create_meeting_fragment_date_button"
                app:layout_constraintTop_toTopOf="@+id/create_meeting_fragment_end_hour" />

            <Button
                android:id="@+id/create_meeting_fragment_date_button"
                android:layout_width="@dimen/width_details_date_button"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_details_date_button"
                android:layout_marginEnd="@dimen/margin_end_details_date_button"
                android:ems="10"
                android:hint="@string/meeting_date"
                android:imeOptions="actionDone"
                android:inputType="date"
                android:textSize="@dimen/normal"
                app:layout_constraintBottom_toBottomOf="@+id/create_meeting_fragment_date_textView"
                app:layout_constraintStart_toEndOf="@+id/create_meeting_fragment_date_textView"
                app:layout_constraintTop_toTopOf="@+id/create_meeting_fragment_date_textView"
                app:layout_constraintVertical_bias="0.571" />

            <TextView
                android:id="@+id/create_meeting_fragment_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_details_select"
                android:text="@string/meeting_room"
                android:textSize="@dimen/normal"
                app:layout_constraintStart_toStartOf="@+id/create_meeting_fragment_end_hour"
                app:layout_constraintTop_toBottomOf="@+id/create_meeting_fragment_end_hour" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margin_start_divider"
                android:layout_marginEnd="@dimen/margin_end_divider"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_meeting_fragment_email_input" />


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_chip_group"
                app:layout_constraintStart_toStartOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/divider">

            </com.google.android.material.chip.ChipGroup>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meetingName_TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start_details_meeting_name_text"
                android:layout_marginTop="@dimen/margin_top_details_meeting_name_text"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="text"
                app:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/create_meeting_fragment_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textSize="@dimen/normal"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/create_meeting_fragment_email_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_details_email_input"
                android:layout_marginEnd="16dp"
                android:hint="@string/participants"
                android:minWidth="@dimen/min_width_details_email_input"
                app:layout_constraintEnd_toStartOf="@id/addParticipant_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/create_meeting_fragment_select"
                app:layout_constraintTop_toBottomOf="@+id/create_meeting_fragment_spinner">

                <AutoCompleteTextView
                    android:id="@+id/participant_autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/width_details_autocomplete"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    app:maxLines="1"
                    android:textSize="@dimen/normal"
                    tools:ignore="LabelFor"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="369dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addParticipant_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/width_details_autocomplete"
                android:layout_marginEnd="8dp"
                android:background="@color/design_default_color_primary"
                android:paddingStart="@dimen/padding_start_add_particiapant_button"
                android:paddingTop="0dp"
                android:paddingEnd="@dimen/padding_end_add_particiapant_button"
                android:paddingBottom="0dp"
                android:text="@string/add_participant"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/create_meeting_fragment_email_input" />




        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</ScrollView>